--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/dl-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Digital Lync LMS</title>
+  <title>BTS</title>
   <style>
     body {
       color: 'white';
-      background-color: yellow;
+      background-color: lavender;
     }
   </style>
 </head>
